Changed folder structure and deleted some extraneous stuff

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/jpg" href="pictures/lmlogo"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <script src="javascript/programitjs.js" defer></script>
+    <script src="stylesheetmainpage/programitjs.js" defer></script>
   </head>
   <body>
 
