--- a/picturepage/picture.html
+++ b/picturepage/picture.html
@@ -4,7 +4,7 @@
     <title>Pictures</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1. viewport-fit=cover">
-    <link rel="stylesheet" href="../stylesheet/style.css">
+    <link rel="stylesheet" href="../menupagestylesheet/style.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="../pictures/lmlogo"/>
