--- a/staffpage/staff.html
+++ b/staffpage/staff.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../stylesheet/style.css">
+    <link rel="stylesheet" href="../menupagestylesheet/style.css">
     <link rel="stylesheet" href="staff.css">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="../pictures/lmlogo"/>
