Fixed pointer in index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 viewport-fit = cover">
     <meta charset="utf-8">
     <title>Program.it</title>
-    <link href="stylesheet/styledesktop.css" rel="stylesheet"  media="(min-width: 450px)" >
-    <link href="stylesheet/stylephone.css" rel="stylesheet"  media="(max-width: 450px)" >
+    <link href="stylesheetmainpage/styledesktop.css" rel="stylesheet"  media="(min-width: 450px)" >
+    <link href="stylesheetmainpage/stylephone.css" rel="stylesheet"  media="(max-width: 450px)" >
     <link rel="shortcut icon" type="image/jpg" href="pictures/lmlogo"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&family=Press+Start+2P&display=swap" rel="stylesheet">
