Picture page does not go the slide

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="about/about.html">About Program.it</a>
           <a href="whycompsci/computerscienceinfo.html">Why Computer Science?</a>
           <a href="staffpage/staff.html">Staff</a>
-          <a href="picturepage/picture.html#slide-1">Pictures</a>
+          <a href="picturepage/picture.html">Pictures</a>
         </div>
       </div>
       <div id = "navbarelements">
