--- a/staffpage/staff.html
+++ b/staffpage/staff.html
@@ -20,8 +20,14 @@
       <div class="staff">
         <div class="member"><img src="prince.jpg" width="250px">
           <h2 class = "headercontent">Prince Geutler</h2>
-          <p class="paragraph"> Hey my name is Prince Geutler, I founded Program.it in late 2019 as a senior at Lower Merion. I am now studying Computer Science at Temple University. I have been heavily involved in Program.it since its inception, having created lesson plans, and the Program.it website amongst other things. I am looking forward to another sucessful Program.it event this year! 
-              
+          <p class="paragraph"> Hey my name is Prince Geutler, I founded Program.it in late 2019 as a senior at Lower Merion. I am now studying Computer Science at Temple University. I have been heavily involved in Program.it since its inception, having created lesson plans, and the Program.it website amongst other things. I am looking forward to another sucessful Program.it event this year!
+
+          </p>
+        </div>
+        <div class="member"><img src="swope.jpg" width="250px">
+          <h1 class="headercontent">Thomas Swope</h1>
+          <p class="paragraph">
+            Hello my name is Thomas Swope
           </p>
         </div>
         <div class="member"><img src="swope.jpg" width="250px">
