Updated staffpage with Phillip Gao and T.Swope info

--- a/staffpage/staff.html
+++ b/staffpage/staff.html
@@ -11,32 +11,28 @@
   <body>
     <div class="header">
       <h1>Program.it <span class="maroon">Staff</span> </h1>
-
       <div class="divider"></div>
       <div class="buttons"><a class="button bordered" href="../index.html">Home</a><a class="button selected" href="../whycompsci/computerscienceinfo.html">Why Computer Science?</a><a class="button" href="../about/about.html">About</a><a class="button" href="../picturepage/picture.html">Pictures</a></div>
     </div>
     <div class="body">
-
       <div class="staff">
         <div class="member"><img src="prince.jpg" width="250px">
           <h2 class = "headercontent">Prince Geutler</h2>
           <p class="paragraph"> Hey my name is Prince Geutler, I founded Program.it in late 2019 as a senior at Lower Merion. I am now studying Computer Science at Temple University. I have been heavily involved in Program.it since its inception, having created lesson plans, and the Program.it website amongst other things. I am looking forward to another sucessful Program.it event this year!
-
           </p>
         </div>
         <div class="member"><img src="swope.jpg" width="250px">
           <h1 class="headercontent">Thomas Swope</h1>
           <p class="paragraph">
-            Hello my name is Thomas Swope
+            Mr. Swope teaches computer science at Lower Merion High School, leading courses in Java, iOS app development an Artificial Intelligence. Over the last several years he has overseen growth in the subject from 27 students taking CS courses to just under 250. He is currently focused on encouraging a more diverse group of students to study this important subject through outreach events like program.it and the development of engaging, student centered curriculum.
           </p>
         </div>
-        <div class="member"><img src="swope.jpg" width="250px">
-          <h1 class="headercontent">Thomas Swope</h1>
+        <div class="member"><img src="Gao.jpg" width="250px">
+          <h1 class="headercontent">Phillip Gao</h1>
           <p class="paragraph">
-            Hello my name is Thomas Swope
+             Hello! My name is Phillip Gao and I’m a senior at Lower Merion. I’m excited to participate in my fourth year of the Computer Science club and to lead Program.it. When not teaching Python to middle schoolers or organizing the CodeLM competition, I enjoy competing in the Technology Student Association, swimming for the high school team, and playing jazz piano. I hope you have fun at Program.it!
           </p>
         </div>
       </div>
     </div>
-
 </body></html>
