Changed picture size of Phil

--- a/staffpage/staff.html
+++ b/staffpage/staff.html
@@ -27,7 +27,7 @@
             Mr. Swope teaches computer science at Lower Merion High School, leading courses in Java, iOS app development an Artificial Intelligence. Over the last several years he has overseen growth in the subject from 27 students taking CS courses to just under 250. He is currently focused on encouraging a more diverse group of students to study this important subject through outreach events like program.it and the development of engaging, student centered curriculum.
           </p>
         </div>
-        <div class="member"><img src="Gao.jpg" width="250px">
+        <div class="member"><img src="Gao.png" width="250px">
           <h1 class="headercontent">Phillip Gao</h1>
           <p class="paragraph">
              Hello! My name is Phillip Gao and I’m a senior at Lower Merion. I’m excited to participate in my fourth year of the Computer Science club and to lead Program.it. When not teaching Python to middle schoolers or organizing the CodeLM competition, I enjoy competing in the Technology Student Association, swimming for the high school team, and playing jazz piano. I hope you have fun at Program.it!
