another try with the iframe, pray for me

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -13,7 +13,8 @@
 
     <a href = "../index.html"> Home </a>
 
-    <iframe scrolling = "no" src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfWHCPjHvsf4XLo0AgQGuqZZTYtaoStMs_Gn9HwbJUr7WT5Ng/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" height="1600px" width ="100%">Loading…</iframe>
+    
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfWHCPjHvsf4XLo0AgQGuqZZTYtaoStMs_Gn9HwbJUr7WT5Ng/viewform?embedded=true" width="100%" height="1600px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 
 
