centering the about text

--- a/about/about.html
+++ b/about/about.html
@@ -20,7 +20,7 @@
 
       <iframe   src="https://www.youtube.com/embed/ERPYraIR8Ec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-      <p class = "paragraph"> Program.it is a computer science event that seeks to increase diversity in Computer Science! Check out a short sneak peek of the event above!</p>
+      <p class = "aboutparagraph"> Program.it is a computer science event that seeks to increase diversity in Computer Science! Check out a short sneak peek of the event above!</p>
 
 
 
