makes microbit website open in new tab

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </a>
           <h3> Drones </h3>
 
-          <a href="https://microbit.org/projects/" id = "button3">
+          <a href="https://microbit.org/projects/" id = "button3" target = "_blank">
           <img src="pictures/drone-01.jpg" id = "grouppic">
           </a>
           <h4> Microbits </h4>
