--- a/whycompsci/computerscienceinfo.html
+++ b/whycompsci/computerscienceinfo.html
@@ -17,6 +17,7 @@
       <div class="buttons"><a class="button bordered" href="../index.html">Home</a><a class="button selected" href="../about/about.html">About Program.it</a><a class="button" href="../staffpage/staff.html">Staff</a><a class="button" href="../picturepage/picture.html">Pictures</a></div>
     </div>
     <div class="content">
+      <h2 class = "headercontent"> PLAY VIDEO </h2>
   
        <iframe   src="https://www.youtube.com/embed/xI_QDO_fnCY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
