--- a/signup/signup.html
+++ b/signup/signup.html
@@ -14,7 +14,7 @@
     <a href = "../index.html"> Home </a>
 
     
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfWHCPjHvsf4XLo0AgQGuqZZTYtaoStMs_Gn9HwbJUr7WT5Ng/viewform?embedded=true" width="100%" height="1600px" frameborder="0" scrolling ="no" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfWHCPjHvsf4XLo0AgQGuqZZTYtaoStMs_Gn9HwbJUr7WT5Ng/viewform?embedded=true" width="100%" height="1600px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 
 
